--- a/extension/popup.html
+++ b/extension/popup.html
@@ -124,6 +124,19 @@
 		</div>
 	</label>
 
+	<label class="setting-title" for="colorMap">
+		Mappa di colori
+		<select id="colorMap">
+			<option value="interpolateViridis" selected>Viridis</option>
+			<option value="interpolateMagma">Magma</option>
+			<option value="interpolateCividis">Cividis</option>
+			<option value="interpolateCubehelixDefault">Cubehelix</option>
+			<option value="interpolateRdPu">RdPu</option>
+			<option value="interpolatePuBuGn">PuBuGn</option>
+			<option value="interpolateGreys">Greys</option>
+		</select>
+	</label>
+	
 	<hr>
 
 	<span style="color: gray; margin-top:1em;">L'estensione si attiva automaticamente sul portale alice (<i>studenti.unipi.it</i>)</span>
