Refactored project structure

--- a/src/popup.html
+++ b/src/popup.html
@@ -142,6 +142,6 @@
 	<span style="color: gray; margin-top:1em;">L'estensione si attiva automaticamente sul portale alice (<i>studenti.unipi.it</i>)</span>
 
 	<script src="popup.js"></script>
-	<script src="scripts/defaultSettings.js"></script>
+	<script src="defaultSettings.js"></script>
 </body>
 </html>
