--- a/src/popup.html
+++ b/src/popup.html
@@ -64,9 +64,9 @@
 	</style>
 </head>
 <body>
-	<div style="display: flex; gap: 1em; justify-content: center; align-items: center; width: 100%;">
-		<img src="images/icon_48.png" width="48" height="48" alt="UniPi++'s icon">
-		<h2 style="font-family: courier new; margin:0;">UniPi++</h2>
+	<div style="display: flex; flex-direction: column; gap: 5px; justify-content: center; align-items: center; width: 100%;">
+		<img src="images/text.png" height="50" alt="UniPi++">
+		<a class="github-button" href="https://github.com/deluf/unipi-plus-plus" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" data-show-count="true" aria-label="Star deluf/unipi-plus-plus on GitHub">Star</a>
 	</div>
 
 	<hr>
@@ -140,5 +140,6 @@
 
 	<script src="popup.js"></script>
 	<script src="defaultSettings.js"></script>
+	<script async defer src="githubButtons.js"></script>
 </body>
 </html>
